MiniX10Parser.java
/* Generated By:JavaCC: Do not edit this line. MiniX10Parser.java */
import syntaxtree.*;
import java.util.Vector;


public class MiniX10Parser implements MiniX10ParserConstants {

  static final public File File() throws ParseException {
   NodeListOptional n0 = new NodeListOptional();
   TopLevelDeclaration n1;
   NodeToken n2;
   Token n3;

   {
   }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n1 = TopLevelDeclaration();
        n0.addNode(n1);
    }
     n0.nodes.trimToSize();
    n3 = jj_consume_token(0);
      n3.beginColumn++; n3.endColumn++;
      n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new File(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public TopLevelDeclaration TopLevelDeclaration() throws ParseException {
   NodeChoice n0;
   MainClass n1;
   ClassDeclaration n2;

   {
   }
    if (jj_2_1(12)) {
      n1 = MainClass();
        n0 = new NodeChoice(n1, 0);
    } else if (jj_2_2(2)) {
      n2 = ClassDeclaration();
        n0 = new NodeChoice(n2, 1);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new TopLevelDeclaration(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;
   NodeToken n13;
   Token n14;
   NodeToken n15;
   Token n16;
   NodeToken n17;
   Token n18;
   NodeToken n19;
   Token n20;
   NodeToken n21;
   Token n22;
   Identifier n23;
   NodeToken n24;
   Token n25;
   NodeToken n26;
   Token n27;
   Statement n28;
   NodeToken n29;
   Token n30;
   NodeToken n31;
   Token n32;

   {
   }
    n1 = jj_consume_token(PUBLIC);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(CLASS);
                n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(LBRACE);
            n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(PUBLIC);
                 n7 = JTBToolkit.makeNodeToken(n8);
    n10 = jj_consume_token(STATIC);
                  n9 = JTBToolkit.makeNodeToken(n10);
    n12 = jj_consume_token(VOID);
                n11 = JTBToolkit.makeNodeToken(n12);
    n14 = jj_consume_token(MAIN);
                n13 = JTBToolkit.makeNodeToken(n14);
    n16 = jj_consume_token(LPAREN);
             n15 = JTBToolkit.makeNodeToken(n16);
    n18 = jj_consume_token(STRING);
                  n17 = JTBToolkit.makeNodeToken(n18);
    n20 = jj_consume_token(LSQPAREN);
             n19 = JTBToolkit.makeNodeToken(n20);
    n22 = jj_consume_token(RSQPAREN);
             n21 = JTBToolkit.makeNodeToken(n22);
    n23 = Identifier();
    n25 = jj_consume_token(RPAREN);
             n24 = JTBToolkit.makeNodeToken(n25);
    n27 = jj_consume_token(LBRACE);
             n26 = JTBToolkit.makeNodeToken(n27);
    n28 = Statement();
    n30 = jj_consume_token(RBRACE);
             n29 = JTBToolkit.makeNodeToken(n30);
    n32 = jj_consume_token(RBRACE);
             n31 = JTBToolkit.makeNodeToken(n32);
     {if (true) return new MainClass(n0,n2,n4,n5,n7,n9,n11,n13,n15,n17,n19,n21,n23,n24,n26,n28,n29,n31);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDeclaration ClassDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
   NodeToken n3;
   Token n4;
   NodeListOptional n5 = new NodeListOptional();
   ClassMember n6;
   NodeToken n7;
   Token n8;

   {
   }
    n1 = jj_consume_token(CLASS);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(LBRACE);
            n3 = JTBToolkit.makeNodeToken(n4);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      n6 = ClassMember();
        n5.addNode(n6);
    }
     n5.nodes.trimToSize();
    n8 = jj_consume_token(RBRACE);
            n7 = JTBToolkit.makeNodeToken(n8);
     {if (true) return new ClassDeclaration(n0,n2,n3,n5,n7);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassMember ClassMember() throws ParseException {
   NodeChoice n0;
   MethodDeclaration n1;
   ConstantDeclaration n2;
   UpdatableFieldDeclaration n3;

   {
   }
    if (jj_2_3(2147483647)) {
      n1 = MethodDeclaration();
        n0 = new NodeChoice(n1, 0);
    } else if (jj_2_4(2)) {
      n2 = ConstantDeclaration();
        n0 = new NodeChoice(n2, 1);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        n3 = UpdatableFieldDeclaration();
        n0 = new NodeChoice(n3, 2);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new ClassMember(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ConstantDeclaration ConstantDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
   Type n6;
   Identifier n7;
   NodeToken n8;
   Token n9;
   Expression n10;
   NodeToken n11;
   Token n12;

   {
   }
    n1 = jj_consume_token(PUBLIC);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(STATIC);
                 n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(FINAL);
                n4 = JTBToolkit.makeNodeToken(n5);
    n6 = Type();
    n7 = Identifier();
    n9 = jj_consume_token(ASSIGN);
            n8 = JTBToolkit.makeNodeToken(n9);
    n10 = Expression();
    n12 = jj_consume_token(SEMICOLON);
             n11 = JTBToolkit.makeNodeToken(n12);
     {if (true) return new ConstantDeclaration(n0,n2,n4,n6,n7,n8,n10,n11);}
    throw new Error("Missing return statement in function");
  }

  static final public UpdatableFieldDeclaration UpdatableFieldDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   Type n2;
   Identifier n3;
   NodeToken n4;
   Token n5;

   {
   }
    n1 = jj_consume_token(PUBLIC);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Type();
    n3 = Identifier();
    n5 = jj_consume_token(SEMICOLON);
            n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new UpdatableFieldDeclaration(n0,n2,n3,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDeclaration MethodDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   ReturnType n2;
   Identifier n3;
   NodeToken n4;
   Token n5;
   NodeOptional n6 = new NodeOptional();
   FormalParameterList n7;
   NodeToken n8;
   Token n9;
   Block n10;

   {
   }
    n1 = jj_consume_token(PUBLIC);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n2 = ReturnType();
    n3 = Identifier();
    n5 = jj_consume_token(LPAREN);
            n4 = JTBToolkit.makeNodeToken(n5);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FINAL:
    case BOOLEAN:
    case INTEGER:
    case STRING:
    case DOUBLE:
    case REGION:
    case DIST:
    case PLACE:
    case POINT:
    case IDENTIFIER:
      n7 = FormalParameterList();
        n6.addNode(n7);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    n9 = jj_consume_token(RPAREN);
            n8 = JTBToolkit.makeNodeToken(n9);
    n10 = Block();
     {if (true) return new MethodDeclaration(n0,n2,n3,n4,n6,n8,n10);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameterList FormalParameterList() throws ParseException {
   FormalParameter n0;
   NodeListOptional n1 = new NodeListOptional();
   FormalParameterRest n2;

   {
   }
    n0 = FormalParameter();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 124:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      n2 = FormalParameterRest();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new FormalParameterList(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameter FormalParameter() throws ParseException {
   NodeChoice n0;
   FinalFormalParameter n1;
   UpdatableFormalParameter n2;

   {
   }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FINAL:
      n1 = FinalFormalParameter();
        n0 = new NodeChoice(n1, 0);
      break;
    case BOOLEAN:
    case INTEGER:
    case STRING:
    case DOUBLE:
    case REGION:
    case DIST:
    case PLACE:
    case POINT:
    case IDENTIFIER:
      n2 = UpdatableFormalParameter();
        n0 = new NodeChoice(n2, 1);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new FormalParameter(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public FinalFormalParameter FinalFormalParameter() throws ParseException {
   NodeToken n0;
   Token n1;
   Type n2;
   Identifier n3;

   {
   }
    n1 = jj_consume_token(FINAL);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Type();
    n3 = Identifier();
     {if (true) return new FinalFormalParameter(n0,n2,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public UpdatableFormalParameter UpdatableFormalParameter() throws ParseException {
   Type n0;
   Identifier n1;

   {
   }
    n0 = Type();
    n1 = Identifier();
     {if (true) return new UpdatableFormalParameter(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameterRest FormalParameterRest() throws ParseException {
   NodeToken n0;
   Token n1;
   FormalParameter n2;

   {
   }
    n1 = jj_consume_token(124);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = FormalParameter();
     {if (true) return new FormalParameterRest(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public ReturnType ReturnType() throws ParseException {
   NodeChoice n0;
   VoidType n1;
   Type n2;

   {
   }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      n1 = VoidType();
        n0 = new NodeChoice(n1, 0);
      break;
    case BOOLEAN:
    case INTEGER:
    case STRING:
    case DOUBLE:
    case REGION:
    case DIST:
    case PLACE:
    case POINT:
    case IDENTIFIER:
      n2 = Type();
        n0 = new NodeChoice(n2, 1);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return new ReturnType(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public VoidType VoidType() throws ParseException {
   NodeToken n0;
   Token n1;

   {
   }
    n1 = jj_consume_token(VOID);
               n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new VoidType(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
   NodeChoice n0;
   UpdatableArrayType n1;
   NonArrayType n2;

   {
   }
    if (jj_2_5(2147483647)) {
      n1 = UpdatableArrayType();
        n0 = new NodeChoice(n1, 0);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case STRING:
      case DOUBLE:
      case REGION:
      case DIST:
      case PLACE:
      case POINT:
      case IDENTIFIER:
        n2 = NonArrayType();
        n0 = new NodeChoice(n2, 1);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new Type(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public UpdatableArrayType UpdatableArrayType() throws ParseException {
   NonArrayType n0;
   NodeToken n1;
   Token n2;
   NodeToken n3;
   Token n4;
   RankEquation n5;
   NodeToken n6;
   Token n7;

   {
   }
    n0 = NonArrayType();
    n2 = jj_consume_token(LSQPAREN);
            n1 = JTBToolkit.makeNodeToken(n2);
    n4 = jj_consume_token(125);
            n3 = JTBToolkit.makeNodeToken(n4);
    n5 = RankEquation();
    n7 = jj_consume_token(RSQPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new UpdatableArrayType(n0,n1,n3,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public RankEquation RankEquation() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   IntegerLiteral n4;

   {
   }
    n1 = jj_consume_token(RANK);
               n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(126);
             n2 = JTBToolkit.makeNodeToken(n3);
    n4 = IntegerLiteral();
     {if (true) return new RankEquation(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public NonArrayType NonArrayType() throws ParseException {
   NodeChoice n0;
   BooleanType n1;
   IntegerType n2;
   DoubleType n3;
   StringType n4;
   PlaceType n5;
   DistType n6;
   RegionType n7;
   PointType n8;
   ClassNameType n9;
